bunch of swagger annotations
