# server/docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "API for MyPic application",
-        "title": "MyPic API",
+        "description": "API for my project",
+        "title": "My API",
         "contact": {},
         "version": "1.0"
     },
@@ -11,6 +11,11 @@
     "paths": {
         "/api/v1/group": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get all group",
                 "consumes": [
                     "application/json"
@@ -57,6 +62,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Add new group",
                 "consumes": [
                     "application/json"
@@ -70,8 +80,8 @@
                 "summary": "Add new group",
                 "parameters": [
                     {
-                        "description": "User details",
-                        "name": "user",
+                        "description": "Group details",
+                        "name": "group",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -100,6 +110,11 @@
         },
         "/api/v1/group/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get an group by its unique ID",
                 "consumes": [
                     "application/json"
@@ -114,7 +129,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Image ID",
+                        "description": "Group ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -136,6 +151,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a group",
                 "consumes": [
                     "application/json"
@@ -171,6 +191,11 @@
         },
         "/api/v1/group/{id}/image": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get all images of the group",
                 "consumes": [
                     "application/json"
@@ -217,6 +242,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Add image to the group",
                 "consumes": [
                     "application/json"
@@ -260,6 +290,11 @@
         },
         "/api/v1/group/{id}/image/{imageId}": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a image from the group",
                 "consumes": [
                     "application/json"
@@ -302,6 +337,11 @@
         },
         "/api/v1/group/{id}/user": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get all users of the group",
                 "consumes": [
                     "application/json"
@@ -348,6 +388,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Add user to the group",
                 "consumes": [
                     "application/json"
@@ -391,6 +436,11 @@
         },
         "/api/v1/group/{id}/user/{userId}": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a user from the group",
                 "consumes": [
                     "application/json"
@@ -433,6 +483,11 @@
         },
         "/api/v1/image": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get all images in the database",
                 "consumes": [
                     "application/json"
@@ -479,6 +534,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create a new image with the provided details",
                 "consumes": [
                     "application/json"
@@ -519,6 +579,11 @@
         },
         "/api/v1/image/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get an image by its unique ID",
                 "consumes": [
                     "application/json"
@@ -555,6 +620,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update an existing image with the provided details",
                 "consumes": [
                     "application/json"
@@ -600,6 +670,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete an existing image by ID",
                 "consumes": [
                     "application/json"
@@ -635,6 +710,11 @@
         },
         "/api/v1/presign": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get presigned URL for uploading an object to S3",
                 "consumes": [
                     "application/json"
@@ -761,6 +841,11 @@
         },
         "/api/v1/user/logout": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Logout a user by invalidating their token",
                 "consumes": [
                     "application/json"
@@ -799,8 +884,47 @@
                 }
             }
         },
+        "/api/v1/user/me": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get current user details",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get current user details",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/user.GetUserResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/common.ErrorResponseDto"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/user/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a user by their unique ID",
                 "consumes": [
                     "application/json"
@@ -837,6 +961,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update an existing user with the provided details",
                 "consumes": [
                     "application/json"
@@ -888,6 +1017,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete an existing user by ID",
                 "consumes": [
                     "application/json"
@@ -1135,6 +1269,13 @@
                     "minLength": 3
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
